# NeMo-Guardrails

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.server  Makefile  README.md  greptile.json  llmrails_refactor.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.agentready/: assessment-20260212-110134.json  assessment-latest.json  report-20260212-110134.html  report-20260212-110134.md  report-latest.html  report-latest.md
.github/: dependabot.yml
.github/scripts/: build.sh
.github/workflows/: _test.yml  create-tag.yml  docs-build.yaml  docs-links-pr.yaml  full-tests.yml  latest-deps-tests.yml  lint.yml  pr-tests.yml  publish-pypi-approval.yml  publish-wheel.yml  push-server-image.yml  release.yml  review-response-reminder.yml  security.yml  stale.yml  test-and-build-wheel.yml  test-docker.yml  test-published-dist.yml  triage-label.yml
benchmark/: Procfile  README.md  requirements.txt
benchmark/aiperf/: README.md
benchmark/embedding_backend/: README.md  bench_embedding_backend.py
benchmark/locust/: README.md  __init__.py  __main__.py  locust_models.py  locustfile.py  run_locust.py
benchmark/mock_llm_server/: models.py
benchmark/tests/: test_locust_models.py  test_run_locust.py
docs/: LIVE_DOCS.mdx  README.mdx  conf.py  index.md  index.mdx  index.yml  project.json  telemetry.mdx  troubleshooting.md  troubleshooting.mdx  versions1.json
docs/_extensions/: validate_redirects.py
docs/about/: how-it-works.md  how-it-works.mdx  overview.md  overview.mdx  rail-types.mdx  release-notes.md  release-notes.mdx  supported-llms.md  supported-llms.mdx
docs/configure-rails/: before-configuration.md  before-configuration.mdx  configuration-reference.md  configuration-reference.mdx  exceptions.md  exceptions.mdx  index.md  index.mdx  overview.md  overview.mdx
docs/deployment/: index.mdx  using-docker.md  using-docker.mdx  using-microservice.mdx
docs/evaluation/: evaluate-configuration.mdx  evaluate-guardrails.md  evaluate-guardrails.mdx  evaluation-methodology.mdx  llm-vulnerability-scanning.md  llm-vulnerability-scanning.mdx
docs/getting-started/: installation-guide.md  installation-guide.mdx  integrate-into-application.mdx
docs/integration/: tools-integration.mdx
docs/migration/: 0.22.md  0.22.mdx
docs/observability/: index.md  index.mdx
docs/reference/: colang-architecture-guide.md  colang-architecture-guide.mdx  guardrails-sequence-diagrams.mdx  library-flows.md  use-case-diagrams.mdx
docs/resources/: faqs.md  research.mdx
docs/run-rails/: index.mdx
docs/scripts/: convert-docs-to-fern.mjs  validate_redirects.py
docs/user-guides/: detections-api-integration.md  kserve-detector-integration.md
examples/notebooks/: gliner_pii_detection.ipynb
fern/: docs.yml  fern.config.json  generators.yml  main.css  openapi.yml
nemoguardrails/: __init__.py  base_guardrails.py  context.py  exceptions.py  header_forwarding.py  imports.py  streaming.py  telemetry.py  types.py  utils.py
nemoguardrails/_compat/: __init__.py  langchain_kwargs.py
nemoguardrails/actions/: action_dispatcher.py  core.py
nemoguardrails/cli/: __init__.py  chat.py  providers.py
nemoguardrails/embeddings/: basic.py  cache.py
nemoguardrails/eval/: check.py  cli.py
nemoguardrails/evaluate/: evaluate_factcheck.py  evaluate_moderation.py  utils.py
nemoguardrails/guardrails/: __init__.py  _http.py  api_engine.py  async_work_queue.py  base_engine.py  engine_registry.py  guardrails.py  guardrails_types.py  iorails.py  model_engine.py  model_manager.py  rail_action.py  rails_manager.py  telemetry.py
nemoguardrails/kb/: kb.py
nemoguardrails/llm/: __init__.py  constants.py  default_framework.py  frameworks.py  helpers.py  openai_reasoning.py  taskmanager.py  types.py
nemoguardrails/logging/: callbacks.py  llm_tracker.py  stats.py
nemoguardrails/server/: anthropic_serving.py  api.py  app.py  checks.py
nemoguardrails/testing/: __init__.py  chat_harness.py  fake_model.py  fixtures.py
nemoguardrails/tracing/: constants.py
qa/: Dockerfile.qa
schemas/: anonymous_events.snapshot.json
scripts/: check-docs-links.sh  discover_required_models.py  document_flows.py  entrypoint.py  entrypoint.sh  extract_telemetry_snapshot.py  filter_guardrails.py  fix-empty-fern-links.mjs  kibana_verify_export.py  normalize-fern-sdk-reference.mjs  pre_download_required_models.py  provider-list.yaml  telemetry-smoke.md  telemetry_smoke.py  watch-fern-preview.mjs
scripts/observability/: configure_otel_sdk.py  otel.py
tests/: conftest.py  test_actions_core.py  test_actions_llm_embedding_lazy_init.py  test_actions_llm_utils.py  test_actions_llm_utils_multimodal.py  test_api.py  test_basic_embeddings_index_numpy.py  test_buffer_strategy.py  test_bug_rail_flows_in_prompt.py  test_cache_embeddings.py  test_cache_lfu.py  test_cache_utils.py  test_content_safety_actions.py  test_content_safety_cache.py  test_content_safety_integration.py  test_context_bloat_detection.py  test_context_updates.py  test_crowdstrike_aidr_guard.py  test_detector_clients_actions.py  test_detector_clients_base.py  test_detector_clients_detections_api.py  test_docs_links.py  test_embeddings_azureopenai.py  test_embeddings_cohere.py  test_embeddings_google.py  test_embeddings_only_user_messages.py  test_embeddings_openai.py  test_execute_action.py  test_general_instructions.py  test_gliner.py  test_guardrail_checks_api.py  test_guardrails_ai_e2e_v1.py  test_hallucination_check.py  test_header_forwarding.py  test_hf_classifier.py  test_imports.py  test_integration_cache.py  test_jailbreak_cache.py  test_jailbreak_config.py  test_jailbreak_model_based.py  (+40 more)
tests/_compat/: test_langchain_kwargs.py
tests/cli/: test_cli_main.py
tests/guardrails/: async_helpers.py  metric_helpers.py  test__http.py  test_api_engine.py  test_async_work_queue.py  test_base_engine.py  test_configure_logging.py  test_content_safety_iorails_actions.py  test_data.py  test_engine_registry.py  test_guardrails.py  test_guardrails_types.py  test_iorails.py  test_iorails_reasoning.py  (+15 more)
(+478 files in other folders)
